Fix mongodb connections and some vulns
Connections to mongodb were failing, and the client lib was very old.
So, updated it to latest. Also found too many vulnerable 3rd party
libs to count, so tried updating. Ended up swapping out the defunct
swagger express lib for express-openapi.
